resolved fdo#51664 some matrix cases broken in binary Excel import

Import (ab)used ScFormulaCell::SetHybridDouble() in the sense that
actually it is not a hybrid (no formula string, the token array is
present in binary import) and during interpretation a matrix was
expected but instead the hybrid encountered.

Introduced ScFormulaCell::SetResultDouble() for exactly this case as a
workaround.

Change-Id: I4da3812ef4974380224b5a2bf42d0b62c14d121b